<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="10dp"
    android:backgroundTint="@color/soft">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
>

<!--        image untuk list item-->
        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            tools:srcCompat="@drawable/baseline_image_24" />

<!--dibuat tanggal berapa-->
        <TextView
            android:id="@+id/tv_createat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:layout_constraintTop_toBottomOf="@+id/iv_item_photo"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            android:text="@string/createat"
            android:layout_marginTop="4dp"
            android:gravity="end"
            android:textColor="@color/black"/>

<!--        pengieim dari story-->
        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_createat"
            android:text="@string/title_story"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"/>

<!--        deskripsi dari story-->
        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            android:text="@string/desc"
            android:maxLines="3"
            android:textSize="16sp"
            android:textColor="@color/black"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>