<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<!--        membuat background dibelakang gambar-->
        <TextView
            android:id="@+id/bg_textView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/pink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

<!--  menampilkan gambar disini      -->
    <ImageView
        android:id="@+id/iv_detail_photo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/baseline_image_24"
        android:transitionName="image"/>

<!--        dibuat kapan-->
        <TextView
            android:id="@+id/creat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_photo"
            android:gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:transitionName="createat"/>

<!--        ini untuk nama pengirim-->
        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/title_story"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/creat"
            android:transitionName="title"/>

<!--        deskripsi story-->
        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
            android:transitionName="desc"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>